# blockchain_from_scratch

./: .gitignore  Manifest.toml  Project.toml  README.md  intro.jl  main.py  pyproject.toml  readme.md
_research/: hello.py
blockchain/: blockchain.py  node.py  pyproject.toml
blockchain/blockchain/: messages.py  peers.py  server.py
blockchain_from_scratch/: Blocker.py  __init__.py
notebooks/: BasicsOfBlockChainAndCryptography.ipynb  BasicsOfPython.ipynb  Discussions for project proposal .ipynb
papers/: proposal.tex
