[tool.poetry]
name = "blockchain"
version = "0.1.0"
description = ""
authors = ["Prakash-coder <chaulagainprakash78@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyNaCl = "^1.5.0"
structlog = "^21.5.0"
colorama = "^0.4.4"
marshmallow = "^3.14.1"
marshmallow-oneofschema = "^3.0.1"
aiohttp = "^3.8.1"
more-itertools = "^8.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
